SPRING GEMFIRE INTEGRATION CHANGELOG
====================================
http://www.springsource.org/spring-gemfire

Changes in version 1.0.1 (2011-mm-dd)
-------------------------------------
General
* Upgraded to GemFire 6.5.1.2

Package org.springframework.data.gemfire
* Introduced auto-close (configurable) on RegionFactoryBean


Changes in version 1.0.0 (2011-02-02)
-------------------------------------


Changes in version 1.0.0.RC1 (2010-12-20)
-----------------------------------------
General
* Upgraded to GemFire 6.5.1
* Upgraded to Spring 3.0.5


Changes in version 1.0.0.M2 (2010-12-08)
----------------------------------------
General
* Introduced namespace for all the major SGF components
* Improved documentation to accomodate the SGF namespace

Package org.springframework.data.gemfire
* Introduced RegionLookupFactoryBean for retrieving (but not creating) regions

Package org.springframework.data.gemfire.client
* Refactored client-specific classes into a dedicated package
* Introduced support for configuring GemFire Pools


Changes in version 1.0.0.M1 (2010-08-03)
----------------------------------------
General
* Configuration support for GemFire Cache, Region
* Exception translation
* GemFire Template for exception translation
* Declarative transaction management
* Auto-generation of non-reflection based GemFire instantiators